--- a/app/step-02.html
+++ b/app/step-02.html
@@ -11,8 +11,8 @@
   </head>
   <body>
     <div class="container-fluid h-100">
-      <div class="row h-100">
-        <div class="col-12 col-sm-8 col-lg-4 col-xl-6 offset-sm-2 offset-lg-0">
+      <div class="row justify-content-center h-100">
+        <div class="col-12 col-md-7">
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="#">Carrinho</a></li>
@@ -36,8 +36,8 @@
             <span class="font-22">Login Social</span>
           </div>
         </div>
-        <div class="col-12 col-lg-8 col-xl-6 bg-gray pd-md">
-          <p class="">Carrinho</p>
+        <div class="col-12 col-md-5 bg-gray pd-md">
+          <p>Carrinho</p>
           <ul class="product-list">
             <li class="product-list__item">
               <span class="product-thumbnail">
@@ -137,10 +137,10 @@
               </div>
             </div>
             <div class="row mg-top-xxs">
-              <div class="col-8 col-sm-10">
-                <a href="#" class="btn btn-finish btn-lg btn-block">finalizar compra <i class="fas fa-chevron-right"></i></a>
+              <div class="col-12 col-sm-10">
+                <a href="#" class="btn btn-finish btn-lg">finalizar compra <i class="fas fa-chevron-right"></i></a>
               </div>
-              <div class="col-4 col-sm-2 text-center">
+              <div class="col-12 col-sm-2 text-center">
                 <i class="color-orange fas fa-lock font-28"></i>
               </div>
             </div>
