Added products thumbs, changed product names, added update total value function.

--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
           <ul class="product-list">
             <li class="product-list__item">
               <span class="product-thumbnail">
-                <img class="img-fluid" src="assets/images/product-thumb.jpg">
+                <img class="img-fluid" src="assets/images/product-thumb-01.jpg">
               </span>
               <span class="product-name">
                 <p class="font-weight-bold no-margin">Blazer Greyscon</p>
@@ -52,14 +52,14 @@
                 <p>1 unid.</p>
                 <i class="fas fa-minus"></i>
               </span>
-              <span class="product-value text-right" data-price="140"><strong>R$ 140,00</strong></span>
+              <span class="product-value text-right" data-price="140" data-price-unid="140"><strong>R$ 140,00</strong></span>
             </li>
             <li class="product-list__item">
               <span class="product-thumbnail">
-                <img class="img-fluid" src="assets/images/product-thumb.jpg">
+                <img class="img-fluid" src="assets/images/product-thumb-02.jpg">
               </span>
               <span class="product-name">
-                <p class="font-weight-bold no-margin">Blazer Greyscon</p>
+                <p class="font-weight-bold no-margin">Blazer Sweet Pink</p>
                 <p>PP</p>
               </span>
               <span class="product-quantity text-center" data-quantity="1">
@@ -67,14 +67,14 @@
                 <p>1 unid.</p>
                 <i class="fas fa-minus"></i>
               </span>
-              <span class="product-value text-right" data-price="140"><strong>R$ 140,00</strong></span>
+              <span class="product-value text-right" data-price="160" data-price-unid="160"><strong>R$ 160,00</strong></span>
             </li>
             <li class="product-list__item">
               <span class="product-thumbnail">
-                <img class="img-fluid" src="assets/images/product-thumb.jpg">
+                <img class="img-fluid" src="assets/images/product-thumb-03.jpg">
               </span>
               <span class="product-name">
-                <p class="font-weight-bold no-margin">Blazer Greyscon</p>
+                <p class="font-weight-bold no-margin">Blazer Blue Petrol</p>
                 <p>PP</p>
               </span>
               <span class="product-quantity text-center" data-quantity="1">
@@ -82,14 +82,14 @@
                 <p>1 unid.</p>
                 <i class="fas fa-minus"></i>
               </span>
-              <span class="product-value text-right" data-price="140"><strong>R$ 140,00</strong></span>
+              <span class="product-value text-right" data-price="120" data-price-unid="120"><strong>R$ 120,00</strong></span>
             </li>
             <li class="product-list__item">
               <span class="product-thumbnail">
-                <img class="img-fluid" src="assets/images/product-thumb.jpg">
+                <img class="img-fluid" src="assets/images/product-thumb-04.jpg">
               </span>
               <span class="product-name">
-                <p class="font-weight-bold no-margin">Blazer Greyscon</p>
+                <p class="font-weight-bold no-margin">Blazer Flowerland</p>
                 <p>PP</p>
               </span>
               <span class="product-quantity text-center" data-quantity="1">
@@ -97,7 +97,7 @@
                 <p>1 unid.</p>
                 <i class="fas fa-minus"></i>
               </span>
-              <span class="product-value text-right" data-price="140"><strong>R$ 140,00</strong></span>
+              <span class="product-value text-right" data-price="180" data-price-unid="180"><strong>R$ 180,00</strong></span>
             </li>
           </ul>
           <div class="coupon-price">
@@ -116,7 +116,7 @@
                 <p class="no-margin">Subtotal</p>
               </div>
               <div class="col-12 col-sm-4 text-right">
-                <p class="cart-subtotal no-margin">R$ 760,00</p>
+                <p class="cart-subtotal no-margin"></p>
               </div>
             </div>
             <div class="row">
@@ -133,7 +133,7 @@
                 <p class="no-margin">Total</p>
               </div>
               <div class="col-12 col-sm-4 text-right">
-                <p class="cart-shipping no-margin">R$ 760,00</p>
+                <p class="cart-value no-margin"></p>
               </div>
             </div>
             <div class="row mg-top-xxs">
