--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,8 @@
   <body>
     <div class="container-fluid h-100">
       <div class="row h-100">
-        <div class="col-12 col-sm-8 col-lg-4 col-xl-6 offset-sm-2 offset-lg-0">
+        <div class="col-12 col-sm-8 col-lg-4 col-xl-7 offset-sm-2 offset-lg-0">
+          <img class="passepag" src="assets/images/passepag.jpg">
           <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="#">Carrinho</a></li>
@@ -21,9 +22,43 @@
             </ol>
           </nav>
           <div class="center">
-            <div class="form-group">
+            <div class="form-group form-group--email">
               <h1 class="mg-bottom-md font-weight-light">Digite seu e-mail para prosseguir</h1>
               <input class="form-control form-control-lg" type="email" name="email" placeholder="E-mail">
+              <a href="#" class="btn btn-finish btn-prosseguir btn-lg" style="display: none;">Prosseguir <i class="fas fa-chevron-right""></i></a>
+            </div>
+            <div class="form-group form-group--login">
+              <h1 class="mg-bottom-md font-weight-light">Finalizar compra com a conta:</h1>
+              <p class="font-22 user-email"></p>
+              <input class="form-control form-control-lg" type="password" name="password-login" placeholder="Digite sua senha">
+              <a href="#" class="btn btn-finish btn-lg btn-block mg-top-xxs">Finalizar compra <i class="fas fa-chevron-right"></i></a>
+            </div>
+            <div class="form-group form-group--nova-conta">
+              <h1 class="mg-bottom-xxs font-weight-light">Nova conta:</h1>
+              <p class="font-22 user-email mg-bottom-md"></p>
+              <p class="font-22 mg-top-sm">Endereço de entrega:</p>
+              <div class="row mg-bottom-xxs">
+                <div class="col-12">
+                  <input class="form-control form-control-lg" type="text" name="cep" placeholder="CEP">
+                </div>
+              </div>
+              <div class="row mg-bottom-xxs">
+                <div class="col-12 col-sm-8">
+                  <input class="form-control form-control-lg" type="text" name="logadouro" placeholder="Endereço">
+                </div>
+                <div class="col-12 col-sm-4">
+                  <input class="form-control form-control-lg" type="text" name="numero" placeholder="N">
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-12 col-sm-8">
+                  <input class="form-control form-control-lg" type="text" name="bairro" placeholder="Bairro">
+                </div>
+                <div class="col-12 col-sm-4">
+                  <input class="form-control form-control-lg" type="text" name="estado" placeholder="Estado">
+                </div>
+              </div>
+              <a href="#" class="btn btn-finish btn-lg btn-block mg-top-xxs">Finalizar compra <i class="fas fa-chevron-right"></i></a>
             </div>
           </div>
           <div class="login-social-bottom">
@@ -36,7 +71,7 @@
             <span class="font-22">Login Social</span>
           </div>
         </div>
-        <div class="col-12 col-lg-8 col-xl-6 bg-gray pd-md">
+        <div class="col-12 col-lg-8 col-xl-5 bg-gray pd-md">
           <p class="">Carrinho</p>
           <ul class="product-list">
             <li class="product-list__item">
